overflow fix

--- a/src/app/componentLib/dialog/dialog/styles.scss
+++ b/src/app/componentLib/dialog/dialog/styles.scss
@@ -1,5 +1,5 @@
 .dialog {
-	overflow: auto;
+	overflow-y: auto;
 	position: relative;
 	width: 100%;
 	max-width: 720px;
